gcc/testsuite/g++.dg/lookup/crash7.C
// PR c++/35323
// { dg-options "" }

void foo(int);

void bar()
{
  foo(1r); // { dg-error "unnamed-fixed" }
}
